First Gentoo ebuild. Example source & config adopted for gentoo's file locations

--- a/example/fastcgi.conf
+++ b/example/fastcgi.conf
@@ -22,8 +22,8 @@
 	</pools>
 
 	<modules>
-		<module name="example" path="./example/.libs/example.so"/>
-		<module name="logger" path="./syslog/.libs/fastcgi2-syslog.so"/>
+		<module name="example" path="./example.so"/>
+		<module name="logger" path="/usr/lib/libfastcgi2-filelogger.so"/>
 	</modules>
 
 	<components>
@@ -35,7 +35,7 @@
 		</component>
 		<component name="daemon-logger" type="logger:logger">
 			<level>DEBUG</level>
-			<file>/var/log/fastcgi2/example-daemon.log</file>
+			<file>/tmp/example-daemon.log</file>
 			<ident>example-daemon-logger</ident>
 			<pattern>%r [%d] %p %c %x - %m%n</pattern>
 		</component>
@@ -44,7 +44,7 @@
 	<handlers>
 		<handler url="/test" pool="work_pool">
 			<component name="example"/>
-		<!--	<component name="example2"/> -->
+			<component name="example2"/> 
 		</handler>
 		<handler url="/upload" pool="work_pool">
 			<component name="example2"/>
